--- a/client/source/sass/objects/_torrents.scss
+++ b/client/source/sass/objects/_torrents.scss
@@ -2,19 +2,28 @@
   display: flex;
   flex: 5;
   position: relative;
+
+  &:after {
+    background: $torrent-list--background;
+    bottom: 0;
+    box-shadow: -1px 0 0 0 $torrent-list--border;
+    content: '';
+    height: auto;
+    left: 10px;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 }
 
 .torrent {
 
   &__list {
-    background: $torrent-list--background;
-    box-shadow: -1px 0 0 0 $torrent-list--border;
     margin: 0 0 0 10px;
     padding: 10px 0;
     position: relative;
 
     &__wrapper {
-      height: auto;
       list-style: none;
       max-width: 100%;
       opacity: 1;
